RESOLVED FIXED198777
[GTK] Fix a11y support in bubblewrap sandbox
https://bugs.webkit.org/show_bug.cgi?id=198777
Summary [GTK] Fix a11y support in bubblewrap sandbox
Patrick Griffis
Reported 2019-06-11 19:00:24 PDT
[GTK] Fix a11y support in bubblewrap sandbox
Attachments
Patch (1.46 KB, patch)
2019-06-11 19:01 PDT, Patrick Griffis
no flags
Patrick Griffis
Comment 1 2019-06-11 19:01:22 PDT
WebKit Commit Bot
Comment 2 2019-06-11 19:50:55 PDT
Comment on attachment 371909 [details] Patch Clearing flags on attachment: 371909 Committed r246344: <https://trac.webkit.org/changeset/246344>
WebKit Commit Bot
Comment 3 2019-06-11 19:50:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.