[GTK] Fix a11y support in bubblewrap sandbox https://bugs.webkit.org/show_bug.cgi?id=198777

Patch by Patrick Griffis <pgriffis@igalia.com> on 2019-06-11
Reviewed by Michael Catanzaro.

* UIProcess/Launcher/glib/BubblewrapLauncher.cpp:
(WebKit::bindA11y):

Canonical link: https://commits.webkit.org/212758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246344 268f45cc-cd09-0410-ab3c-d52691b4dbfc